--- a/frontend/src/components/Dashboard/Dashboard.css
+++ b/frontend/src/components/Dashboard/Dashboard.css
@@ -60,7 +60,6 @@
 }
 
 .dashboard-overview {
-    /* margin: 0 1rem; */
     padding: 0.8rem 4rem;
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.1);
@@ -68,4 +67,8 @@
 
 .dashboard-overview p{
     text-align: justify;
+}
+
+.mb-2rem {
+    margin-bottom: 2rem;
 }
