--- a/frontend/src/components/Dashboard/LessonCards.css
+++ b/frontend/src/components/Dashboard/LessonCards.css
@@ -5,6 +5,13 @@
 
 .lesson-card-title {
     margin: 0;
+    margin-bottom: 1rem;
     font-size: 1.5rem;
     font-weight: 600;
+}
+
+.lesson-card-description {
+    margin: 0;
+    font-size: 1rem;
+    font-weight: 400;
 }
