--- a/frontend/src/components/Dashboard/LessonCards.css
+++ b/frontend/src/components/Dashboard/LessonCards.css
@@ -6,12 +6,21 @@
 .lesson-card-title {
     margin: 0;
     margin-bottom: 1rem;
-    font-size: 1.5rem;
-    font-weight: 600;
+    font-size: 1.2rem;
+    font-weight: 400;
 }
 
 .lesson-card-description {
     margin: 0;
-    font-size: 1rem;
-    font-weight: 400;
+    font-size: 2rem;
+    font-weight: 600;
+    word-wrap: break-word;
+}
+
+.lesson-card-hr {
+    width: 100%;
+}
+
+.lesson-card-preview {
+    font-weight: 300;
 }
