Update Lesson Page

--- a/frontend/src/components/NotFound/NotFound.css
+++ b/frontend/src/components/NotFound/NotFound.css
@@ -12,7 +12,7 @@
 
 #ZERO {
     color: red;
-    animation: pulse 5s infinite;
+    animation: pulse 5s infinite ease-in-out;
 }
 
 /* animate zero pulsing color */
