--- a/frontend/src/components/EditorPage/EditorPage.css
+++ b/frontend/src/components/EditorPage/EditorPage.css
@@ -1,5 +1,19 @@
+.editor-page-backgroundColor {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100dvw;
+    height: 100dvh;
+    background-image: url("../../assets/LionLogo.png");
+    background-color: #e4e4e4;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 50%;
+    filter: blur(5px);
+    z-index: -1;
+}
+
 .editor-page-container {
-    /* background-color: #f0f0f0; */
 }
 
 .mt-2rem {
@@ -16,7 +30,7 @@
     justify-content: center;
     font-size: 1.8rem;
     font-weight: 700;
-    letter-spacing: 0.2rem;;
+    letter-spacing: 0.1rem;;
     margin-bottom: 2rem;
 }
 
@@ -28,7 +42,7 @@
     padding: 1rem;
     border-radius: 10px;
     font-size: 1.4rem;
-    font-weight: 600;
+    font-weight: 500;
     background-color: #EDEDED;
 }
 
